--- a/教师试卷批改统计辅助软件计划.md
+++ b/教师试卷批改统计辅助软件计划.md
@@ -14,21 +14,20 @@
 2. 学生在考试的时候，肯定会用到草稿纸，在考试的时候学生一会用电容笔在电子墨水屏上书写，一会用普通铅笔草稿纸上书写草稿，这种不停换笔的行为对于用户体验来说是非常难受的。
 3. 使用类似电子墨水屏，必须提供一套操作系统来提供相应功能，技术成本太高。
 
-
-
 ### 扫描仪方式（最终方案）
 
 通过扫描仪将考卷批量扫描成电子化版本，电子化以后的考卷内容将提交至边缘计算设备和云端，边缘计算设备和云端将通过识别、计算、整理等方式，将考卷内容分割成以题目为单位的独立片段，每个片段都有唯一的识别码，片段可以通过识别码来组合成一张某个人的完整试卷，也可以通过识别码识别相同的题目片段。
 
 教师通过电脑或者ipad来处理题目片段，比如打分，批注，统计、分享等等功能，当处理完所有题目片段之后，通过提交，将修改的内容提交至边缘计算设备和云端，通过同一台扫描打印机，将考卷再次放入，通过打印将修改的内容打印至考卷纸上，完成考卷审阅工作，同时，考卷相关内容在这过程中也已经数字化，后续的数据分析也将可以实现。
 
-
-
-
-
 ## 方案难点
 
+1. 扫描仪是否支持批量扫描,需要考虑扫描仪的硬件成本。
+2. 需要将考卷按照题目进行分割，有可能一道大题分散于两张试卷或正反面，如何将一份完整考卷分割成一个个题目片段是改方案实施的最大难点。
+3. 在将考卷分割为题目片段成功之后，用户通过ipad进行批改、批注等操作，接下来需要将修改的后的题目片段再次还原成完整考卷，同时修改的内容也需要调整到合适的位置。
+4. 在讲考卷修改内容打印回纸质考卷上时，需要识别考卷与修改内容的一一对应，使修改的内容打印到正确的纸质试卷上。
 
-
-## 后续计划
+## 初步后续计划
+1. 获取纸质考卷样本，分析考卷排版和内容。
+2. 确认合适技术方案，硬件方案。
 
