--- a/教师试卷批改统计辅助软件计划.md
+++ b/教师试卷批改统计辅助软件计划.md
@@ -25,7 +25,7 @@
 1. 扫描仪是否支持批量扫描,需要考虑扫描仪的硬件成本。
 2. 需要将考卷按照题目进行分割，有可能一道大题分散于两张试卷或正反面，如何将一份完整考卷分割成一个个题目片段是改方案实施的最大难点。
 3. 在将考卷分割为题目片段成功之后，用户通过ipad进行批改、批注等操作，接下来需要将修改的后的题目片段再次还原成完整考卷，同时修改的内容也需要调整到合适的位置。
-4. 在讲考卷修改内容打印回纸质考卷上时，需要识别考卷与修改内容的一一对应，使修改的内容打印到正确的纸质试卷上。
+4. 在将考卷修改内容打印回纸质考卷上时，需要识别考卷与修改内容的一一对应，使修改的内容打印到正确的纸质试卷上。
 
 ## 初步后续计划
 1. 获取纸质考卷样本，分析考卷排版和内容。
